# lazyllama

./: .pre-commit-config.yaml  README.md  pyproject.toml
lazyllama/: __init__.py  chat.py  cli.py  settings.py
