[project]
name = "lazyllama"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "specv", email = "61646426+specv@users.noreply.github.com" }
]
dependencies = ["textual~=0.24.1", "typer[all]~=0.9.0", "langchain~=0.0.168", "openai~=0.27.6", "pydantic[dotenv]~=1.10.7", "platformdirs~=3.5.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["textual[dev]~=0.24.1", "ipython~=8.12.2", "ruff~=0.0.267", "pre-commit~=3.3.1"]
