[project]
name = "lazyllama"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "specv", email = "61646426+specv@users.noreply.github.com" }
]
dependencies = ["textual~=0.24.1", "typer[all]~=0.9.0", "langchain~=0.0.168", "openai~=0.27.6", "pydantic[dotenv]~=1.10.7", "platformdirs~=3.5.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["textual[dev]~=0.24.1", "ipython~=8.12.2", "ruff~=0.0.267", "pre-commit~=3.3.1"]

[tool.ruff]
select = [
# "ALL",
  "S",   # flake8-bandit
  "FBT", # flake8-boolean-trap
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "PIE", # flake8-pie
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "I",   # isort
  "C90", # mccabe complexity
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
# "D",   # pydocstyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
]
line-length = 88

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 6

[tool.black]
line-length = 88

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "skip"
